2013-06-26  Liubov Dmitrieva  <liubov.dmitrieva@intel.com>

	[BZ #15674]
	* sysdeps/x86_64/multiarch/memcmp-ssse3.S: Fix buffers overrun.

2013-06-26  Maciej W. Rozycki  <macro@codesourcery.com>

	[BZ #15022]
	* elf/dl-open.c (_dl_open) [!SHARED]: Move call to DL_STATIC_INIT
	over to...
	(dl_open_worker) [!SHARED]: ... here.

2013-06-26  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* elf/elf.h (AT_HWCAP2): Add a new a_type entry.

2013-06-25  Richard Henderson  <rth@redhat.com>

	* locale/programs/locarchive.c: Include <libc-internal.h>

2013-06-25  Joseph Myers  <joseph@codesourcery.com>

	* manual/texinfo.tex: Update to version 2013-06-21.17, with
	trailing whitespace removed.

2013-06-24  Mike Frysinger  <vapier@gentoo.org>

	[BZ #10283]
	* locale/locarchive.h (struct locarhandle): Add mmap_base and mmap_len.
	* locale/programs/locarchive.c: Include libc-mmap.h.
	(prepare_address_space): Take two new outputs (the mmap base and len).
	Align p to MAP_FIXED_ALIGNMENT.  Set mmap base and len to the right
	values.
	(create_archive): Declare new mmap base and len values for
	prepare_address_space, and store the result in ah.
	(file_data_available_p): Replace pagesz with MAP_FIXED_ALIGNMENT.
	(enlarge_archive): If ah->mmap_base is not NULL, use that and
	ah->mmap_len to unmap rather than ah->addr and ah->reserved.
	Declare new mmap base and len values for
	prepare_address_space, and store the result in new_ah.
	(open_archive): Declare new mmap base and len values for
	prepare_address_space, and store the result in ah.
	(close_archive): If ah->mmap_base is not NULL, use that and
	ah->mmap_len to unmap rather than ah->addr and ah->reserved.
	* sysdeps/generic/libc-mmap.h: New file.

2013-06-24  Mike Frysinger  <vapier@gentoo.org>

	* include/libc-internal.h (ALIGN_DOWN): New helper macro.
	(ALIGN_UP): Likewise.
	(PTR_ALIGN_DOWN): Likewise.
	(PTR_ALIGN_UP): Likewise.

2013-06-24  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>
